# ecommerce-market-analysis-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manual_tests.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: dependencies.py
app/api/routes/: analysis.py  health.py
app/llm/: client.py
app/llm/prompts/: __init__.py  builder.py  system.md
app/llm/schemas/: __init__.py  deep_synthesis.json  report_synthesis.json
app/models/: requests.py  responses.py  tool_outputs.py
app/orchestrator/: agent.py  context.py  executor.py  pipeline.py
app/store/: job_store.py
app/tools/: base.py  product_collector.py  sentiment_analyzer.py  trend_analyzer.py
examples/: fallback_report_iphone_16_pro_20260405_010726.json  fallback_report_macbook_pro_14_20260405_010729.json  fallback_sample_report_iphone16_20260405.json  groq_llm_report_iphone16.json  groq_llm_report_iphone_16_pro_20260405_010726.json  groq_llm_report_macbook_pro_14_20260405_010729.json
scripts/: generate_examples.py
tests/: conftest.py
tests/test_api/: test_routes.py
tests/test_orchestrator/: test_agent.py  test_executor.py  test_pipeline.py
tests/test_tools/: test_product_collector.py  test_sentiment_analyzer.py  test_trend_analyzer.py
